[package]
name = "powerlight"
version = "0.1.0"
description = "A fast spotlight-like launcher for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "powerlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
fuzzy-matcher = "0.3"
once_cell = "1"
parking_lot = "0.12"
dirs = "5"
image = "0.25"
